--- a/css/style.css
+++ b/css/style.css
@@ -17,20 +17,6 @@ h3{
     color: rgb(77, 59, 37);
     font-family:'Gill Sans';
     font-weight:normal;
-
-}
-
-.imagens{
-    display: flex;
-    width: 100%;
-    height: 50vh; /* Ocupa 100% da altura da tela */
-}
-
-.imagens img {
-    width: 50%;
-    height: 100%;
-    object-fit: cover; /* Cobre toda a área do contêiner sem distorção */
-    border-radius: 8px;
 }
 
 .container{
@@ -48,7 +34,6 @@ nav{
 nav li {
 	display:inline;
 	margin: 15px;
-    font-size: 20px;
     font-weight: bold;
     color: rgb(66, 51, 32);    
     font-family:'Gill Sans';
@@ -67,17 +52,24 @@ body{
     background-color: rgb(202, 164, 115);
 }
 
+.imagens{
+    display: flex;
+    width: 100%;
+    height: 50vh;
+}
+
+.imagens img {
+    width: 50%;
+    height: 100%;
+    object-fit: cover; /* Cobre toda a área do contêiner sem distorção */
+    border-radius: 8px;
+}
+
 section{
     display: flex;
     align-items: center;
     font-size: 20px;
 }
-
-section, li{
-    font-size: 20px;
-    list-style-type:none;
-}
-
 
 footer{
     font-family:'Gill Sans';
